--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "vite-plugin-electron-renderer": "^0.3.2"
+    "vite-plugin-optimizer": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
@@ -24,6 +24,7 @@
   "keywords": [
     "vite",
     "plugin",
-    "electron"
+    "electron",
+    "renderer"
   ]
 }
