--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "build": "rm -rf dist && tsc",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {
-    "vite-plugin-optimizer": "^1.3.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^17.0.31",
     "typescript": "^4.6.4",
