--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-electron",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Integrate Vite and Electron",
   "main": "dist/index.js",
   "repository": {
@@ -21,6 +21,9 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.8"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "vite",
     "plugin",
