--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "vite-plugin-electron-renderer": "^0.5.7"
+    "vite-plugin-electron-renderer": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
