--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@types/node": "^18.0.3",
     "typescript": "^4.7.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "rollup": "^2.77.0"
   },
   "files": [
     "dist",
