--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "plugin",
     "electron"
   ],
-  "scripts": {}
+  "scripts": {
+    "build": "pnpm -r --filter=./packages/* run build",
+    "dev": "pnpm -r --parallel --filter=./packages/* run dev"
+  }
 }
