vite-plugin-electron@0.8.0

--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vite-plugin-electron",
-  "version": "0.7.5",
+  "version": "0.8.0",
   "description": "Integrate Vite and Electron",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-vite/vite-plugin-electron.git"
+    "url": "git+https://github.com/electron-vite/vite-plugin-electron.git",
+    "directory": "packages/electron"
   },
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
