--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "scripts": {
     "build": "pnpm -r --filter=./packages/* run build",
     "dev": "pnpm -r --parallel --filter=./packages/* run dev"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.6",
+    "typescript": "^4.7.4"
   }
 }
