--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "rm -rf dist && tsc --watch",
     "build": "rm -rf dist && tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "node ../../scripts/check-command.js && npm run build"
   },
   "dependencies": {
     "vite-plugin-electron-renderer": "workspace:*"
