--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
   },
+  "packageManager": "pnpm@7.0.0",
   "homepage": "https://github.com/electron-vite/vite-plugin-electron",
   "keywords": [
     "vite",
