--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -10,6 +10,7 @@
   },
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "rm -rf dist && tsc --watch",
     "build": "rm -rf dist && tsc",
