chor(playground): update types

--- a/playground/usecase-in-main/tsconfig.json
+++ b/playground/usecase-in-main/tsconfig.json
@@ -16,5 +16,7 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src", "electron-env.d.ts", "vite.config.ts"]
+  "types": [
+    "vite-plugin-electron/electron-env"
+  ]
 }
