--- a/examples/usecase-in-renderer/package.json
+++ b/examples/usecase-in-renderer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-plugin-electron-quick-start",
   "version": "0.0.0",
+  "private": true,
   "description": "test vite-plugin-electron",
   "main": "dist/electron/main.js",
   "scripts": {
@@ -16,7 +17,7 @@
   },
   "devDependencies": {
     "@types/sqlite3": "^3.1.8",
-    "electron": "^19.0.8",
+    "electron": "^21.0.1",
     "electron-builder": "^23.1.0",
     "electron-store": "^8.0.2",
     "execa": "^6.1.0",
@@ -24,6 +25,6 @@
     "node-fetch": "^3.2.8",
     "vite-plugin-electron": "workspace:*",
     "vite-plugin-esmodule": "^1.4.1",
-    "vite": "^3.0.6"
+    "vite": "^3.1.4"
   }
 }
