--- a/examples/quick-start/tsconfig.json
+++ b/examples/quick-start/tsconfig.json
@@ -6,11 +6,11 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "allowJs": true,
-    "declaration": true,
+    "strict": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "outDir": "dist"
-  },
-  "include": ["electron", "src", "vite.config.ts"]
+    "isolatedModules": true,
+    "noEmit": true,
+    "baseUrl": "."
+  }
 }
