--- a/examples/usecase-in-main/tsconfig.json
+++ b/examples/usecase-in-main/tsconfig.json
@@ -14,9 +14,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true
-  },
-  "types": [
-    "vite-plugin-electron/electron-env"
-  ]
+    "skipLibCheck": true,
+    "types": [
+      "vite-plugin-electron/electron-env"
+    ]
+  }
 }
