--- a/examples/usecase-in-main/package.json
+++ b/examples/usecase-in-main/package.json
@@ -25,6 +25,6 @@
     "node-fetch": "^3.2.8",
     "vite-plugin-electron": "workspace:*",
     "vite-plugin-esmodule": "^1.4.1",
-    "vite": "^3.1.4"
+    "vite": "^3.2.0-beta.0"
   }
 }
