--- a/packages/electron-renderer/package.json
+++ b/packages/electron-renderer/package.json
@@ -29,7 +29,7 @@
   "dependencies": {},
   "devDependencies": {
     "esbuild": "^0.15.10",
-    "vite": "^3.1.4"
+    "vite": "^3.2.0-beta.0"
   },
   "files": [
     "plugins",
