--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -26,8 +26,11 @@
     "vite-plugin-electron-renderer": "workspace:*"
   },
   "devDependencies": {
-    "vite": "^3.1.4",
+    "vite": "^3.2.0-beta.0",
     "rollup": "^2.77.0"
+  },
+  "peerDependencies": {
+    "vite": ">=3.2.0"
   },
   "files": [
     "src",
