feat(examples): quick-start upgrade config to v0.10.0

--- a/examples/quick-start/package.json
+++ b/examples/quick-start/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build && electron-builder"
+    "build": "tsc && vite build && electron-builder"
   },
   "dependencies": {},
   "devDependencies": {
