--- a/packages/electron-renderer/package.json
+++ b/packages/electron-renderer/package.json
@@ -30,7 +30,8 @@
   "dependencies": {},
   "devDependencies": {
     "esbuild": "^0.15.10",
-    "vite": "^3.2.0-beta.0"
+    "vite": "^3.2.0-beta.0",
+    "rollup": "^2.77.0"
   },
   "files": [
     "plugins",
