--- a/examples/quick-start/tsconfig.json
+++ b/examples/quick-start/tsconfig.json
@@ -1,15 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "CommonJS",
-    "esModuleInterop": true,
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "allowJs": true,
     "strict": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "noEmit": true,
-    "baseUrl": "."
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "skipLibCheck": true,
+    "types": [
+      "vite-plugin-electron/electron-env"
+    ]
   }
 }
