--- a/examples/nodeIntegration/package.json
+++ b/examples/nodeIntegration/package.json
@@ -29,6 +29,6 @@
     "vite-plugin-electron": "workspace:*",
     "vite-plugin-electron-renderer": "workspace:*",
     "vite-plugin-esmodule": "^1.4.1",
-    "vite": "^3.2.0-beta.0"
+    "vite": "^3.1.8"
   }
 }
