--- a/examples/quick-start/package.json
+++ b/examples/quick-start/package.json
@@ -20,6 +20,6 @@
     "electron-builder": "^23.1.0",
     "typescript": "^4.7.4",
     "vite-plugin-electron": "workspace:*",
-    "vite": "^3.2.0-beta.0"
+    "vite": "^3.1.8"
   }
 }
