--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -26,11 +26,8 @@
   "devDependencies": {
     "typescript": "^4.7.4",
     "vite-plugin-electron-renderer": "workspace:*",
-    "vite": "^3.2.0-beta.0",
+    "vite": "^3.1.8",
     "rollup": "^2.77.0"
-  },
-  "peerDependencies": {
-    "vite": ">=3.2.0"
   },
   "files": [
     "src",
