--- a/packages/electron-renderer/package.json
+++ b/packages/electron-renderer/package.json
@@ -30,9 +30,10 @@
   "dependencies": {},
   "devDependencies": {
     "esbuild": "^0.15.10",
+    "rollup": "~2.78.0",
     "typescript": "^4.7.4",
-    "vite": "^3.2.0-beta.0",
-    "rollup": "^2.77.0"
+    "vite": "^3.1.8",
+    "vite-plugin-utils": "^0.3.6"
   },
   "files": [
     "plugins",
