--- a/packages/electron-renderer/tsconfig.json
+++ b/packages/electron-renderer/tsconfig.json
@@ -14,5 +14,5 @@
     "strict": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/build-config.vite-3.0.5.ts"]
+  "exclude": ["exclude", "src/build-config.vite-3.0.5.ts"]
 }
