--- a/examples/nodeIntegration/electron-builder.json5
+++ b/examples/nodeIntegration/electron-builder.json5
@@ -10,7 +10,10 @@
     output: "release/${version}",
     buildResources: "electron/resources",
   },
-  files: ["dist"],
+  files: [
+    "dist",
+    "dist-electron"
+  ],
   win: {
     target: [
       {
