chore: update build config for vite-plugin-electron-renderer@0.10.2

--- a/examples/quick-start/electron-builder.json5
+++ b/examples/quick-start/electron-builder.json5
@@ -8,7 +8,8 @@
     "output": "release/${version}"
   },
   "files": [
-    "dist"
+    "dist",
+    "dist-electron"
   ],
   "mac": {
     "artifactName": "${productName}_${version}.${ext}",
