chore(custom-start-electron-app): update build config for vite-plugin-electron-renderer@0.10.2

--- a/examples/custom-start-electron-app/package.json
+++ b/examples/custom-start-electron-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-electron-custom-start-electron-app",
   "version": "0.0.0",
-  "main": "dist/electron/main.js",
+  "main": "dist-electron/main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/electron-vite/vite-plugin-electron.git",
