--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "resolveJsonModule": true,
+    "strict": true,
     "allowJs": true,
     "declaration": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "outDir": "out",
-    "strict": true
+    "outDir": "types"
   },
   "include": ["src/**/*.ts", "electron-env.d.ts"]
 }
