--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-electron",
   "version": "0.11.1",
   "description": "Electron 🔗 Vite",
-  "main": "index.mjs",
+  "main": "index.js",
   "types": "types",
   "exports": {
     ".": {
@@ -23,9 +23,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "typescript": "^4.7.4",
-    "vite": "^4.0.0",
-    "rollup": "^3.7.3"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3",
+    "rollup": "^3.8.1"
   },
   "files": [
     "types",
