--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "rm -rf types && tsc --emitDeclarationOnly && vite build",
+    "build": "rimraf types && tsc --emitDeclarationOnly && vite build",
     "prepublishOnly": "npm run test && npm run build",
     "test": "vitest run"
   },
-  "dependencies": {},
   "devDependencies": {
+    "rimraf": "^3.0.2",
+    "rollup": "^3.9.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
-    "vitest": "^0.26.2",
-    "rollup": "^3.8.1"
+    "vitest": "^0.26.2"
   },
   "files": [
     "types",
