--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "vite-plugin-electron",
   "version": "0.11.1",
   "description": "Electron 🔗 Vite",
-  "main": "index.js",
-  "types": "types",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
-    }
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./*": "./*"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "rm -rf types && tsc --emitDeclarationOnly && vite build",
+    "build": "vite build",
+    "types": "tsc --emitDeclarationOnly",
     "prepublishOnly": "npm run test && npm run build",
     "test": "vitest run"
   },
@@ -29,9 +32,7 @@
     "vitest": "^0.28.5"
   },
   "files": [
-    "types",
-    "index.mjs",
-    "index.js",
+    "dist",
     "electron-env.d.ts"
   ],
   "keywords": [
