--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
+  "packageManager": "pnpm@8.0.0",
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
