--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "rollup": "^4.9.1",
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.3",
